--- a/app/applibrary/webapp/view/Detail.view.xml
+++ b/app/applibrary/webapp/view/Detail.view.xml
@@ -1,36 +1,40 @@
  <mvc:View controllerName="com.mindset.applibrary.admin.AppTracker.controller.Detail" xmlns="sap.m" xmlns:semantic="sap.f.semantic"
 	xmlns:mvc="sap.ui.core.mvc" xmlns:core="sap.ui.core" xmlns:footerbar="sap.ushell.ui.footerbar">
-	<Page title="{i18n>appCatDesc}" titleAlignment="Center" titleLevel="H1" showNavButton="true" navButtonPress="onNavDetailBack">
+	<Page title="{i18n>appCatDesc}" titleAlignment="Center" titleLevel="H1" showNavButton="false" navButtonPress="onNavDetailBack">
 		<content>
 			<Table id="idProductsTable" inset="false" items="{ path: 'ViewModel>/tableArray'}">
 				<headerToolbar>
 					<OverflowToolbar>
 						<content>
+							<Breadcrumbs>
+								<Link press="onNavDetailBack" text="{ViewModel>/Level1}"/>
+								<Link text="{ViewModel>/Level2}"/>
+							</Breadcrumbs >
 							<ToolbarSpacer/>
 							<Button type="Emphasized" icon="sap-icon://add" press="onCreatePress"/>
 						</content>
 					</OverflowToolbar>
 				</headerToolbar>
 				<columns>
-					<Column width="12rem">
+					<Column width="12rem" class="sapUiTinyMarginBegin">
 						<Text text="{i18n>appname}"/>
 					</Column>
-					<Column width="12rem" minScreenWidth="Tablet" demandPopin="true">
+					<Column width="10rem" minScreenWidth="Tablet" demandPopin="true">
 						<Text text="{i18n>industry}"/>
 					</Column>
-					<Column width="12rem" minScreenWidth="Tablet" demandPopin="true">
+					<Column width="10rem" minScreenWidth="Tablet" demandPopin="true">
 						<Text text="{i18n>techtags}"/>
 					</Column>
 					<!-- <Column>
 						<Text text="Rating"/>
 					</Column> -->
-					<Column width="8rem" minScreenWidth="Tablet" demandPopin="true">
+					<Column width="7rem" minScreenWidth="Tablet" demandPopin="true">
 						<Text text="{i18n>status}"/>
 					</Column>
 					<Column width="3rem" minScreenWidth="Tablet" demandPopin="true">
 						<Text text=""/>
 					</Column>
-					<Column width="3rem" hAlign="End">
+					<Column width="3rem" hAlign="End" class="sapUiTinyMarginEnd">
 						<Text text=""/>
 					</Column>
 				</columns>
