--- a/app/applibrary/webapp/view/List.view.xml
+++ b/app/applibrary/webapp/view/List.view.xml
@@ -6,35 +6,68 @@
 
     <Page title="{i18n>appTitle}" titleAlignment="Center" titleLevel="H1" showNavButton="false" navButtonPress="onNavBack">
 		<content>
-			<List id="list" width="auto" class="sapFDynamicPageAlignContent" items="{ path: 'ViewModel>/AppCategories', sorter: {
-				path: 'categoryname'}}"
-				busyIndicatorDelay="{masterView>/delay}" noDataText="{masterView>/noDataText}" 
-				mode="{= ${device>/system/phone} ? 'None' : 'SingleSelectMaster'}" growing="true" growingScrollToLoad="true"
-				updateFinished=".onUpdateFinished" selectionChange=".onSelectionChange">
+			<Table inset="false"
+				selectionChange=".onSelectionChange"
+				id="list" items="{ path: 'ViewModel>/AppCategories', sorter: {
+				path: 'categoryname'}}" busyIndicatorDelay="{masterView>/delay}"
+				mode="{= ${device>/system/phone} ? 'None' : 'SingleSelectMaster'}" 
+				growing="true" growingScrollToLoad="true">
+				
 				<headerToolbar>
 					<OverflowToolbar>
-					<ToolbarSpacer/>
+						<Breadcrumbs>
+							<Link text="{ViewModel>/Level1}"/>
+						</Breadcrumbs >
+						<ToolbarSpacer/>						
 						<SearchField id="searchField" showRefreshButton="true" tooltip="{i18n>masterSearchTooltip}" search=".onSearch" width="auto">
 							<layoutData>
 								<OverflowToolbarLayoutData minWidth="150px" maxWidth="240px" shrinkable="true" priority="NeverOverflow"/>
 							</layoutData>
 						</SearchField>
-						<!-- <ToolbarSpacer/>
-						<Button id="sortButton" press=".onOpenViewSettings" icon="sap-icon://sort" type="Transparent"/> -->
+						<!-- <Button type="Emphasized" icon="sap-icon://add" press="showFragmentCatalog"/>
+						<Button type="Emphasized" icon="sap-icon://edit" press="onEnableButtons" visible="{ViewModel>/listButtonVisible}"/>
+						<Button type="Reject" icon="sap-icon://delete" press="onListItemDelete" visible="{= ${ViewModel>/listButtonVisible} ? false : true}"/>
+						<Button type="Emphasized" icon="sap-icon://edit" press="onListItemEdit" visible="{= ${ViewModel>/listButtonVisible} ? false : true}"/>
+						<Button type="Reject" icon="sap-icon://decline" press="onDecline" visible="{= ${ViewModel>/listButtonVisible} ? false : true}"/> -->
 					</OverflowToolbar>
 				</headerToolbar>
+				
+				<columns>
+					<Column	width="12em" class="sapUiTinyMarginBegin"> 
+						<Label text="{i18n>category_name}" design="Bold"/>
+					</Column>
+					<Column width="12em"
+						id="dimensionsColumn"
+						minScreenWidth="Desktop"
+						demandPopin="true"
+						hAlign="Center">
+						<Label text="{i18n>category_type}"  design="Bold"/>
+					</Column>
+					<Column width="7em"
+						id="weightColumn"
+						minScreenWidth="Desktop"
+						demandPopin="true"
+						hAlign="Center">
+						<Label text="{i18n>count}"  design="Bold"/>
+					</Column>
+					<Column	hAlign="End" class="sapUiTinyMarginEnd" width="7em">
+						<Label text="{i18n>persentage}"  design="Bold"/>
+					</Column>
+				</columns>
 				<items>
-					<ObjectListItem type="Navigation" press=".onSelectionChange" title="{ViewModel>categoryname}"
-						number="{ViewModel>count}"	visible ="{= ${ViewModel>delete} ? false : true}">
-						<firstStatus>
-							<ObjectStatus
+					<ColumnListItem vAlign="Middle" press=".onSelectionChange" type="Navigation" visible ="{= ${ViewModel>delete} ? false : true}">
+						<cells>
+						<Text text="{ViewModel>categoryname}"/>
+						<Text text="{ViewModel>sCategory_type}" wrapping="true"/>
+						<Text text="{ViewModel>count}"/>
+						<ObjectStatus
 								text="{ViewModel>total} %"
 								state="{= ${ViewModel>total} === 100 ? 'Success' : 'Warning'}" />
-						</firstStatus>
-						<ObjectAttribute text="{ViewModel>sCategory_type}"/>						
-						</ObjectListItem>
+						</cells>
+					</ColumnListItem>
 				</items>
-			</List>
+
+			</Table>
 		</content>
 		<footer>
 			<OverflowToolbar>
